--- a/tipografia.html
+++ b/tipografia.html
@@ -42,8 +42,10 @@
                     class="othertype">"FruteriA"</span> FruteriA
                 <br><br>
                 Para mas información sobre la tipografía y el set iconografico se puede acceder a este microsite a modo
-                de anexo.arrowright
-                <a href="https://santingsa.github.io/Locvi_mod_font/">Ir a LocviMod Font Showcase</a>
+                de anexo.
+                <div class="lateral_nav">
+                <a href="https://santingsa.github.io/Locvi_mod_font/">IsotipO Ir a LocviMod Font Showcase</a>
+            </div>
             </p>
         </div>
         <div class="div_images">
