--- a/index.html
+++ b/index.html
@@ -362,6 +362,6 @@
       </div>
     </main>
 
-    <footer>Locvi-Manual de identidad - Santiago Núñez García - ESDMadrid2022</footer>
+    <footer>Locvi-Manual de identidad - Santiago Núñez García - ESDMadrid2022 <a rel="license" href="http://creativecommons.org/licenses/by-nc-nd/4.0/"><img alt="Licencia Creative Commons" style="border-width:0" src="https://i.creativecommons.org/l/by-nc-nd/4.0/80x15.png" /></a><br /><span xmlns:dct="http://purl.org/dc/terms/" property="dct:title">Locvi</span> por <span xmlns:cc="http://creativecommons.org/ns#" property="cc:attributionName">Santiago Núñez García</span> se distribuye bajo una <a rel="license" href="http://creativecommons.org/licenses/by-nc-nd/4.0/">Licencia Creative Commons Atribución-NoComercial-SinDerivadas 4.0 Internacional</a>.</footer>
   </body>
 </html>
